# bevy_sprite_instancing

./: Cargo.toml  README.md
examples/: simple.rs
src/: draw.rs  extract.rs  lib.rs  pipeline.rs  prepare.rs  shader.rs
