[package]
name = "bevy_sprite_instancing"
version = "0.1.1"
edition = "2021"
authors = ["Mark Poliakov <mark@alnyan.me>"]
description = "A Bevy plugin to render lots of instanced sprites"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alnyan/bevy_sprite_instancing"
repository = "https://github.com/alnyan/bevy_sprite_instancing"
readme = "README.md"
exclude = ["*.gif", "assets/*"]

[dependencies]
bevy = { version = "^0.10.1", default-features = false, features = [
        "bevy_asset",
        "bevy_core_pipeline",
        "bevy_render",
        "bevy_sprite",
] }
bytemuck = { version = "1.13.1", features = ["derive"] }
field-offset = "0.3.5"

[dev-dependencies]
bevy = { version = "^0.10.1" }
rand = "0.8.5"
